| Bug #47740 | Cluster migration 6.3.x->7.0.x: Restarting old SQL nodes crashes old data nodes | ||
|---|---|---|---|
| Submitted: | 30 Sep 2009 11:47 | Modified: | 2 Oct 2009 11:57 |
| Reporter: | Tino Rachui | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 6.3.26 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
| Tags: | cluster online upgrade | ||
[30 Sep 2009 11:47]
Tino Rachui
[30 Sep 2009 11:48]
Tino Rachui
Database log files
Attachment: ndb_error_report_20090910125237.tar.bz2 (application/x-bzip, text), 79.80 KiB.
[30 Sep 2009 12:21]
Gustaf Thorslund
Tino, Could you please verify what version you are trying to upgrade to. You say 7.0.8, but the 'show' output say 7.0.8. Just had a quick look so far, but it looks a bit similar to bug #47542, see: http://bugs.mysql.com/bug.php?id=47542 And that one got fixed to 7.0.8. /Gustaf
[30 Sep 2009 13:19]
Tino Rachui
"Could you please verify what version you are trying to upgrade to. You say 7.0.8, but the 'show' output say 7.0.8..." To be precise I was trying to upgrade to a (self built) 7.0.7 + patch for #47542 (so to say a pre-7.0.8 ;)). So this really seems to be a different issue. :(
[1 Oct 2009 9:32]
Jonas Oreland
The problem is that dbtup sends new format to old DbUtil Fix is trivial :-(
[1 Oct 2009 9:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/85328 3083 Jonas Oreland 2009-10-01 ndb - bug#47740 - testcase only (cause bug should be fixed in 7.0)
[1 Oct 2009 11:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/85340 3063 Jonas Oreland 2009-10-01 ndb - bug#47740 - fix so that new tup doesnt send long-signals to old dbutil
[1 Oct 2009 11:20]
Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:jonas@mysql.com-20091001112043-nbbza8h969y169q9) (version source revid:jonas@mysql.com-20091001112043-nbbza8h969y169q9) (merge vers: 5.1.39-ndb-7.0.9) (pib:11)
[1 Oct 2009 13:25]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0) (version source revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0) (merge vers: 5.1.39-ndb-7.1.0) (pib:11)
[2 Oct 2009 11:57]
Jon Stephens
Documented bugfix in the NDB-7.0.9 changelog as follows:
During an upgrade, newer nodes could in some cases attempt to
use the long signal format for communication with older nodes that
did not understand the newer format.
Closed.
