ndb - bug#47740 - fix so that new tup doesnt send long-signals to old dbutil